--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="card__side card__side--back card__side--back-1">
               <div class="card__cta">
                 <div class="card__back-box">
-                  <p>To Aku, my love is an unwavering promise, a commitment etched into the very fabric of my being. Even when the storms of life threaten to cast shadows, I want her to know that I am steadfast, standing by her side. No matter the challenges or disagreements we may face, I pledge to navigate them together, hand in hand.</p>
+                  <p>To Aksha, my love is an unwavering promise, a commitment etched into the very fabric of my being. Even when the storms of life threaten to cast shadows, I want you to know that I am steadfast, standing by you side. No matter the challenges or disagreements we may face, I pledge to navigate them together, hand in hand. Our love is a sanctuary, a refuge where understanding and patience bloom, ensuring that even in moments of frustration or anger, the foundation remains unshaken. You are not just a part of my life; You are my life, and I want to assure you that I will never leave her. Our love story is an enduring masterpiece, and with each passing day, my commitment to you grows stronger, deeper, and more profound.</p>
                 </div>
               </div>
             </div>
