--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="card__side card__side--back card__side--back-2">
               <div class="card__cta">
                 <div class="card__back-box">
-                <p>Seeing you in traditional attire is like witnessing a living poem, a celebration of heritage and identity that leaves an indelible mark on my heart. In those instances, I am reminded that she is a mosaic of the past and the present, a beacon of grace and beauty that transcends cultural boundaries. It's a privilege to witness her embody the spirit of tradition, and with each glance, I am enamored anew, grateful to share these moments with a woman whose beauty goes beyond the surface, connecting with the very roots of our shared existence</p>
+                <p>Seeing You in traditional attire is like witnessing a living poem, a celebration of heritage and identity that leaves an indelible mark on my heart. In those instances, I am reminded that You are a mosaic of the past and the present, a beacon of grace and beauty that transcends cultural boundaries. It's a privilege to witness you embody the spirit of tradition, and with each glance, I am enamored anew, grateful to share these moments with a woman whose beauty goes beyond the surface, connecting with the very roots of our shared existence.</p>
                 </div>
               </div>
             </div>
