--- a/index.html
+++ b/index.html
@@ -1,21 +1,70 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Login</title>
-    <link rel="stylesheet" type="text/css" href="login.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Page</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            background-image: url('lovebird.jpg'); /* Replace 'lovebird.jpg' with your actual image file */
+            background-size: cover;
+            background-position: center;
+        }
+
+        .login-container {
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            max-width: 400px;
+            width: 100%;
+        }
+
+        .login-container img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            margin-bottom: 20px;
+        }
+
+        .login-container input {
+            width: 100%;
+            padding: 10px;
+            margin: 8px 0;
+            box-sizing: border-box;
+        }
+
+        .login-container button {
+            width: 100%;
+            padding: 10px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .login-container button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
-    <h2>Login Page</h2><br>
-    <div class="login">
-    <form id="login" method="post">
-        <label><b>User Name
-        </b>
-        </label>
-        <input type="text" name="Uname" id="Uname" placeholder="Username">
-        <br><br>
-        <input type="submit" value="submit" name="submit">
-    </form>
-</div>
+    <div class="login-container">
+        <img src="https://imgs.search.brave.com/xQ3nziLDd37gQ4MPbVxDAwlsgpz_0rJj_a8qTyPupwc/rs:fit:860:0:0/g:ce/aHR0cHM6Ly93d3cu/cG5naXRlbS5jb20v/cGltZ3MvbS8yODYt/Mjg2NTk3OF90cmFu/c3BhcmVudC1sZXR0/ZXItY2xpcGFydC1i/aXJkLXdpdGgtbG92/ZS1sZXR0ZXItaGQu/cG5n" alt="Lovebird Icon">
+        <h2>Login</h2>
+        <form id="login" method="post">
+            <input type="text" placeholder="Uname" id="Uname">
+            <input type="submit" value="submit" name="submit">
+        </form>
+    </div>
 </body>
 <script>
     document.getElementById("login").addEventListener("submit", function(event) {
@@ -27,7 +76,7 @@
         // Check if the username is correct (you can replace 'user' with the actual correct username)
         if (enteredUsername === "akang") {
             // Redirect to a new page (you can replace 'newpage.html' with the actual page you want to redirect to)
-            window.location.href = "firstpage.html";
+            window.location.href = "t.html";
         } else {
             alert("Incorrect username. Please try again."); // Display an alert for incorrect username
         }
