--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         // Check if the username is correct (you can replace 'user' with the actual correct username)
         if (enteredUsername === "akang") {
             // Redirect to a new page (you can replace 'newpage.html' with the actual page you want to redirect to)
-            window.location.href = "t.html";
+            window.location.href = "firstpage.html";
         } else {
             alert("Incorrect username. Please try again."); // Display an alert for incorrect username
         }
