--- a/firstpage.html
+++ b/firstpage.html
@@ -72,6 +72,23 @@
               </div>
             </div>
           </div>
+        <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front-2">
+                <div class="card__title card__title--2">
+                  <img src="my3.jpg" alt="">
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-3">
+                <div class="card__cta">
+                  <div class="card__back-box">
+                  <p style="margin-top:20px">When I am with you, the world transforms into a canvas painted with the vibrant hues of joy and connection. Your presence is a comforting embrace that wraps around my soul, creating a haven where worries dissipate, and time seems to pause in the magic of the moment. In the tapestry of our togetherness, every shared experience becomes a stroke, weaving a beautiful narrative of love and understanding.ith you, I find solace in the chaos, and in your company, life's challenges become more manageable.When I am with you, I am not just existing—I am truly living, savoring the magic of each moment as if time itself bows to the beauty of our connection.</p>
+                    <a href="letter.html" class="btn btn--green">OPEN THIS</a>
+                </div>
+                </div>
+              </div>
+            </div>
+          </div>
     </section>
     
       
