--- a/firstpage.html
+++ b/firstpage.html
@@ -72,6 +72,8 @@
               </div>
             </div>
           </div>
+        </div>
+        <div class="row">
         <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--front-2">
@@ -89,6 +91,7 @@
               </div>
             </div>
           </div>
+        </div>
     </section>
     
       
