--- a/firstpage.html
+++ b/firstpage.html
@@ -78,14 +78,13 @@
             <div class="card">
               <div class="card__side card__side--front-2">
                 <div class="card__title card__title--2">
-                  <img src="my3.jpg" alt="">
+                  <img src="my4.jpg" alt="">
                 </div>
               </div>
               <div class="card__side card__side--back card__side--back-3">
                 <div class="card__cta">
                   <div class="card__back-box">
-                  <p style="margin-top:20px">When I am with you, the world transforms into a canvas painted with the vibrant hues of joy and connection. Your presence is a comforting embrace that wraps around my soul, creating a haven where worries dissipate, and time seems to pause in the magic of the moment. In the tapestry of our togetherness, every shared experience becomes a stroke, weaving a beautiful narrative of love and understanding.ith you, I find solace in the chaos, and in your company, life's challenges become more manageable.When I am with you, I am not just existing—I am truly living, savoring the magic of each moment as if time itself bows to the beauty of our connection.</p>
-                    <a href="letter.html" class="btn btn--green">OPEN THIS</a>
+                  <p style="margin-top:20px">Date: 27-01-2024 <hr>In the beauty of life, where I surrendered myself in front of you, it always feels great to have that one person whom I call mine. I know you might have judged me after yesterday, but, my love, it's just because of the flow and love I have for you. You know that I will never leave you alone, and, yes, physically, basically, mentally, I am yours, my love. You are the epitome of love and happiness for me, the honey to my life. Every time I see myself, I imagine being on your left side, holding my hands, and hearing you say, "Taru Baby, you can do it." I promise you that no matter what happens, I will be with you.<hr>તુ બધાનો ના વિચારીસ હું, બધાને મનવી લઈસ, બસ તુ મારી સાથે રહ..</p>
                 </div>
                 </div>
               </div>
