--- a/firstpage.html
+++ b/firstpage.html
@@ -84,7 +84,7 @@
               <div class="card__side card__side--back card__side--back-3">
                 <div class="card__cta">
                   <div class="card__back-box">
-                  <p style="margin-top:20px">Date: 27-01-2024 <hr><br>In the beauty of life, where I surrendered myself in front of you, it always feels great to have that one person whom I call mine. I know you might have judged me after yesterday, but, my love, it's just because of the flow and love I have for you. You know that I will never leave you alone, and, yes, physically, basically, mentally, I am yours, my love. You are the epitome of love and happiness for me, the honey to my life. Every time I see myself, I imagine being on your left side, holding my hands, and hearing you say, "Taru Baby, you can do it." I promise you that no matter what happens, I will be with you.<hr><br>તુ બધાનો ના વિચારીસ હું, બધાને મનવી લઈસ, બસ તુ મારી સાથે રહ..</p>
+                  <p style="margin-top:20px">Date: 27-01-2024 <br><hr><br>In the beauty of life, where I surrendered myself in front of you, it always feels great to have that one person whom I call mine. I know you might have judged me after yesterday, but, my love, it's just because of the flow and love I have for you. You know that I will never leave you alone, and, yes, physically, basically, mentally, I am yours, my love. You are the epitome of love and happiness for me, the honey to my life. Every time I see myself, I imagine being on your left side, holding my hands, and hearing you say, "Taru Baby, you can do it." I promise you that no matter what happens, I will be with you.<br><hr><br>તુ બધાનો ના વિચારીસ હું, બધાને મનવી લઈસ, બસ તુ મારી સાથે રહ..</p>
                 </div>
                 </div>
               </div>
