--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
         .login-container button:hover {
             background-color: #45a049;
         }
+        @media only screen and (max-width: 767px) {
+  body {
+    background-image: url('lovebird2.jpg');
+    /* Adjust other styles as needed for mobile */
+  }
+}
     </style>
 </head>
 <body>
