--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
         @media only screen and (max-width: 767px) {
   body {
     background-image: url('lovebird2.jpg');
-    /* Adjust other styles as needed for mobile */
+    height:auto;
+    width:100%;
   }
+    .login-container{
+         background-color: rgba(255, 255, 255, 0.2);
 }
     </style>
 </head>
