--- a/firstpage.html
+++ b/firstpage.html
@@ -94,7 +94,9 @@
             <div class="card">
               <div class="card__side card__side--front-1">
                 <div class="card__title card__title--1">
-                  <img src="my4.jpg" alt="">
+                 <video width="320" height="240" controls>
+        <source src="my5.mp4" type="video/mp4">
+</video>
                 </div>
               </div>
               <div class="card__side card__side--back card__side--back-1">
