--- a/firstpage.html
+++ b/firstpage.html
@@ -94,7 +94,7 @@
             <div class="card">
               <div class="card__side card__side--front-1">
                 <div class="card__title card__title--1">
-                 <video width="320" height="240" controls>
+                 <video controls autoplay>
         <source src="my5.mp4" type="video/mp4">
 </video>
                 </div>
@@ -102,7 +102,7 @@
               <div class="card__side card__side--back card__side--back-1">
                 <div class="card__cta">
                   <div class="card__back-box">
-                  <p style="margin-top:20px">Date: 27-01-2024<br>In the beauty of life, where I surrendered myself in front of you, it always feels great to have that one person whom I call mine. I know you might have judged me after yesterday, but, my love, it's just because of the flow and love I have for you. You know that I will never leave you alone, and, yes, physically, basically, mentally, I am yours, my love. You are the epitome of love and happiness for me, the honey to my life. Every time I see myself, I imagine being on your left side, holding my hands, and hearing you say, "Taru Baby, you can do it." I promise you that no matter what happens, I will be with you.<br>તુ બધાનો ના વિચારીસ હું, બધાને મનવી લઈસ, બસ તુ મારી સાથે રહ..</p>
+                  <p style="margin-top:20px">You Smiled that captured my might,Your eyes glittered like pearls in darkest nights, As it goes on, we exchanged eternal vows, and that abridges the story titled 'love at first sight'.... <br> I am trying to describing you in one line i hope i could make it sense.... You are angel of my life making me happiest always.. You mean a world to me and it's 11th month completed and Next month is so sppecial for me that i can't wait anymore... You are guiding light of myslef</p>
                 </div>
                 </div>
               </div>
