--- a/firstpage.html
+++ b/firstpage.html
@@ -94,7 +94,7 @@
             <div class="card">
               <div class="card__side card__side--front-1">
                 <div class="card__title card__title--1">
-                 <video controls autoplay>
+                 <video controls autoplay muted>
         <source src="my5.mp4" type="video/mp4">
 </video>
                 </div>
