--- a/firstpage.html
+++ b/firstpage.html
@@ -108,6 +108,32 @@
               </div>
             </div>
           </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front-1">
+                <div class="card__title card__title--1">
+                  <img src="my.jpg" alt="">
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-1">
+                <div class="card__cta">
+                  <div class="card__back-box">
+                  <p style="margin-top:20px">Nayan ne bandh rakhi ne mein jayare tamne joya che
+tame cho tane karta pan vadhare tamne joya che
+nayan ne bandh rakhi ne mein jayare tamne joya che
+tame cho tena karta pan vadhare tamne joya che
+nayan ne bandh rakhi ne
+
+Rutu ek j hati pan rang nohto aapno ekj
+mane sharaa-e joyu che tamne bahaare joya che
+tame cho tena karta pan vadhare tamne joya che
+nayan ne bandh rakhi ne</p>
+                </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       
     </section>
