--- a/firstpage.html
+++ b/firstpage.html
@@ -148,24 +148,24 @@
                 <div class="card">
                     <div class="card__side card__side--front-1">
                         <div class="card__title card__title--1">
-                            <img src="my.jpg" alt="">
+                            <img src="my6.jpg" alt="">
                         </div>
                     </div>
                     <div class="card__side card__side--back card__side--back-1">
                         <div class="card__cta">
                             <div class="card__back-box">
-                                <pre style="margin-top:20px">
-                                    Nayan ne bandh rakhi ne mein jayare tamne joya che
-                                    tame cho tane karta pan vadhare tamne joya che
-                                    nayan ne bandh rakhi ne mein jayare tamne joya che
-                                    tame cho tena karta pan vadhare tamne joya che
-                                    nayan ne bandh rakhi ne
+                                <p style="margin-top:20px">
+                                    Nayan ne bandh rakhi ne mein jayare tamne joya che<br>
+                                    tame cho tane karta pan vadhare tamne joya che<br>
+                                    nayan ne bandh rakhi ne mein jayare tamne joya che<br>
+                                    tame cho tena karta pan vadhare tamne joya che<br>
+                                    nayan ne bandh rakhi ne<br>
                                     
-                                    Rutu ek j hati pan rang nohto aapno ekj
-                                    mane sharaa-e joyu che tamne bahaare joya che
-                                    tame cho tena karta pan vadhare tamne joya che
-                                    nayan ne bandh rakhi ne
-                                </pre>
+                                    Rutu ek j hati pan rang nohto aapno ekj<br>
+                                    mane sharaa-e joyu che tamne bahaare joya che<br>
+                                    tame cho tena karta pan vadhare tamne joya che<br>
+                                    nayan ne bandh rakhi ne<br>
+                                </p>
                             </div>
                         </div>
                     </div>
