--- a/firstpage.html
+++ b/firstpage.html
@@ -172,7 +172,24 @@
                 </div>
             </div>
         </div>
-
+        <div class="row">
+            <div class="col-1-of-3">
+                <div class="card">
+                    <div class="card__side card__side--front-1">
+                        <div class="card__title card__title--1">
+                            <img src="my7.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="card__side card__side--back card__side--back-1">
+                        <div class="card__cta">
+                            <div class="card__back-box">
+                                <p style="margin-top:20px">You know my love what are you for me.. let me tell you what you are for me you are world of hopes for me.. I know I can't love anyone more than you and frankly speaking I can't love you as much as you love me. i know i get angry easily.. Your replies matter me most because if you don't reply on time then i always think that there is no value of mine. Atlu toh imp kaam hais k reply na kari sake aevu feel thay mane... Tu avi pachi su thayu che mara life ma mare explain karvani jarur nathi hoon bas taro cho and taro j rais ee joo...</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </section>
 
